Re-order dependencies
Previously the prometheus-exporter depended on the web service being up
and healthy, which was the wrong way around. Similarly, the delayed-job
service depended on the web service being up when it should depend on
the prometheus-exporter and postgres services being up and healthy..

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,8 @@ services:
     ports:
       - 127.0.0.1:1201:1201
     depends_on:
+      prometheus-exporter:
+        condition: service_healthy
       postgres:
         condition: service_healthy
       jira:
@@ -87,14 +89,21 @@ services:
     environment:
       DATABASE_URL: postgresql://postgres:postgres@postgres/shipment_tracker
       LOG_LEVEL: "${LOG_LEVEL:-debug}"
+      PROMETHEUS_EXPORTER_HOST: prometheus-exporter
+      PROMETHEUS_EXPORTER_PORT: 9394
       PROTECT_STDOUT: 'true'
       RAILS_ENV: "${RAILS_ENV:-development}"
     env_file: secrets.env
     tty: true
     stdin_open: true
     depends_on:
-      web:
+      prometheus-exporter:
         condition: service_healthy
+      postgres:
+        condition: service_healthy
+    healthcheck:
+      test: bundle exec rake jobs:check
+      interval: 10s
 
   prometheus-exporter:
     image: shipment_tracker
@@ -103,7 +112,7 @@ services:
     tty: true
     stdin_open: true
     depends_on:
-      web:
+      postgres:
         condition: service_healthy
     healthcheck:
       test: curl -f localhost:9394/send-metrics
