Set metrics label 'type' for each Marathon process

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -99,6 +99,10 @@ Style/GlobalVars:
   AllowedVariables:
     - $healthcheck
 
+Style/HashSyntax:
+  Exclude:
+    - 'lib/tasks/*'
+
 Naming/HeredocDelimiterNaming:
   Exclude:
     - 'spec/**/*'
