--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -167,7 +167,7 @@ jobs:
               quay.io/fundingcircle/docker-scripts:latest docker/ci-docker-publish
   pagerduty_plan:
     docker:
-      - image: quay.io/fundingcircle/circleci-terraform:latest
+      - image: quay.io/fundingcircle/circleci-terraform:5.3-0.11.14
         auth:
           username: $DOCKER_USERNAME
           password: $DOCKER_PASSWORD
@@ -185,7 +185,7 @@ jobs:
 
   pagerduty_apply:
     docker:
-      - image: quay.io/fundingcircle/circleci-terraform:latest
+      - image: quay.io/fundingcircle/circleci-terraform:5.3-0.11.14
         auth:
           username: $DOCKER_USERNAME
           password: $DOCKER_PASSWORD
