Change the apply in the pipeline to execute after all tests and publishing of docker image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -227,6 +227,10 @@ workflows:
               ignore: master
       - pagerduty_apply:
           context: org-pagerduty
+          requires:
+            - specs
+            - features
+            - publish-docker-image
           filters:
             branches:
               only: master
