Try to make sure that docker-compose up always works
Don't use scale as it doesn't seem to work properly.

Just add a second instance, then docker-compose starts them one by one and it
seems to be working.

Example problem:

```
$ docker-compose up
Starting shipment_tracker_postgres_1 ... done
Starting shipment_tracker_jira_1     ... done
Starting shipment_tracker_prometheus-exporter_1 ... done
Starting shipment_tracker_delayed-job_1         ...
Starting shipment_tracker_delayed-job_1         ... done
Starting shipment_tracker_web_1                 ... done
Starting shipment_tracker_web_2                 ... done
Starting shipment_tracker_event-worker_1        ... done

ERROR: for git-worker  Container "59ec6b4627fe" is unhealthy.
ERROR: Encountered errors while bringing up the project.
```

And the git-worker doesn't start as one of the web nodes in unhealthy.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '2.4'
 services:
-  web:
+  web: &web_node
     build:
       context: .
     image: shipment_tracker
@@ -35,7 +35,7 @@ services:
     tty: true
     stdin_open: true
     ports:
-      - 127.0.0.1:1201-1202:1201
+      - 127.0.0.1:1201:1201
     depends_on:
       prometheus-exporter:
         condition: service_healthy
@@ -51,7 +51,11 @@ services:
       retries: 60
       timeout: 5s
       start_period: 30s
-    scale: 2
+
+  web-02:
+    <<: *web_node
+    ports:
+      - 127.0.0.1:1202:1201
 
   git-worker:
     image: shipment_tracker
