--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -165,6 +165,23 @@ jobs:
               --env DOCKER_PASS="$DOCKER_PASSWORD" \
               --volume /var/run/docker.sock:/var/run/docker.sock \
               quay.io/fundingcircle/docker-scripts:latest docker/ci-docker-publish
+      - run:
+          name: Scan image
+          command: |
+            docker pull quay.io/fundingcircle/drone-prisma-cloud:1
+            docker run \
+              --env "REPO=${DOCKER_REGISTRY}/${DOCKER_ORG}/${CIRCLE_PROJECT_REPONAME}" \
+              --env "REGISTRY=$DOCKER_REGISTRY" \
+              --env DOCKER_USERNAME \
+              --env DOCKER_PASSWORD \
+              --env "PRISMA_CLOUD_USER=$TWISTCLI_USERNAME" \
+              --env "PRISMA_CLOUD_PASSWORD=$TWISTCLI_PASSWORD" \
+              --env "TAGS=$CIRCLE_SHA1" \
+              --env "GITHUB_TOKEN=$GITHUB_API_TOKEN" \
+              --env "GITHUB_REPOSITORY=$CIRCLE_PROJECT_REPONAME" \
+              --env "GIT_SHA=$CIRCLE_SHA1" \
+              --volume /var/run/docker.sock:/var/run/docker.sock \
+              quay.io/fundingcircle/drone-prisma-cloud:1
   pagerduty_plan:
     docker:
       - image: quay.io/fundingcircle/circleci-terraform:6.2-0.12.16
