--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -152,7 +152,11 @@ jobs:
               --tag $CIRCLE_PROJECT_REPONAME \
               --pull \
               --build-arg NAME=$CIRCLE_PROJECT_REPONAME \
-              --build-arg REVISION=$CIRCLE_SHA1
+              --build-arg REVISION=$CIRCLE_SHA1 \
+              --build-arg URL="https://github.com/FundingCircle/${CIRCLE_PROJECT_REPONAME}/tree/${CIRCLE_SHA1}" \
+              --build-arg SOURCE="${CIRCLE_REPOSITORY_URL}" \
+              --build-arg CREATED="$(date --utc +%FT%TZ)" \
+              --build-arg MANAGER="${ENGINEERING_MANAGER_PLATFORM}"
       - run:
           name: Push to Docker registry
           command: |
