--- a/dropzone.yaml
+++ b/dropzone.yaml
@@ -77,7 +77,7 @@ deploy_tasks:
         instances: 1
         cpus: 0.25
         mem: {{ prometheus_exporter_memory }}
-        args: ["bundle", "exec", "prometheus_exporter", "--bind", "0.0.0.0"]
+        args: ["bundle", "exec", "prometheus_exporter", "--bind", "0.0.0.0", "--verbose"]
         container:
           docker:
             portMappings:
